sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:17: error: not found: value by
	for (i<- getNombreValeurs()-2 to by -1)
                                         ^